fix: grid gap and align main layout

--- a/fancy-weather/src/styles/layout/_main.scss
+++ b/fancy-weather/src/styles/layout/_main.scss
@@ -3,13 +3,13 @@
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: repeat(3, minmax(50px, max-content));
-  grid-gap: 10%;
+  grid-gap: 5%;
   grid-template-areas:
     'controls controls'
     'today    geo'
     'forecast geo';
   background-color: rgba($color: #000000, $alpha: 0.5);
-  align-items: end;
+  align-items: center;
 
   &__controls {
     grid-area: controls;
